unpackaged/main/default/objects/npsp__Allocation__c/npsp__Allocation__c.object-meta.xml
<CustomObject>
    <label>GAU Allocation</label>
    <nameField>
        <displayFormat>ALL-{0}</displayFormat>
        <label>GAU Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAU Allocations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>