unpackaged/main/default/objects/npsp__Allocation__c/fields/Allocation_Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Expected_Amount__c</fullName>
    <formula>IF(
NOT(ISBLANK( npsp__Payment__c )), 
 npsp__Payment__r.npe01__Opportunity__r.Probability *  npsp__Amount__c ,
 npsp__Opportunity__r.Probability * npsp__Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>