unpackaged/main/default/objects/npsp__Allocation__c/fields/Allocation_USD_Initial_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocation_USD_Initial_Amount__c</fullName>
    <label>Allocation USD Initial Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>