unpackaged/main/default/objects/npsp__Allocation__c/fields/Current_Budget__c.field-meta.xml
<CustomField>
    <fullName>Current_Budget__c</fullName>
    <description>Heller created 2021</description>
    <label>Current Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>