unpackaged/main/default/objects/npsp__Allocation__c/fields/Current_Budget_as_of_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Budget_as_of_Date__c</fullName>
    <description>Heller created 2021</description>
    <label>Current Budget as of Date</label>
    <type>Date</type>
</CustomField>