unpackaged/main/default/objects/npsp__Allocation__c/fields/Default_Designation__c.field-meta.xml
<CustomField>
    <fullName>Default_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Default Designation</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>GAU Allocations (Default Designation)</relationshipLabel>
    <relationshipName>GAU_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>