unpackaged/main/default/objects/npsp__Allocation__c/fields/Donation_Adjustment_Code__c.field-meta.xml
<CustomField>
    <fullName>Donation_Adjustment_Code__c</fullName>
    <description>Heller created 2021</description>
    <label>Donation Adjustment Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carry-over</fullName>
            </value>
            <value>
                <fullName>Donation revision</fullName>
            </value>
            <value>
                <fullName>No adjusting entry</fullName>
            </value>
            <value>
                <fullName>Partial chargeback</fullName>
            </value>
            <value>
                <fullName>Partial refund</fullName>
            </value>
            <value>
                <fullName>Payment transfer</fullName>
            </value>
            <value>
                <fullName>Designation Adjustment</fullName>
            </value>
            <value>
                <fullName>Donation Revision - Amount Increase</fullName>
            </value>
            <value>
                <fullName>Donation Revision - Amount Decrease</fullName>
            </value>
            <value>
                <fullName>Entity Adjustment</fullName>
            </value>
            <value>
                <fullName>Entry Error</fullName>
            </value>
            <value>
                <fullName>Reclass - Admin</fullName>
            </value>
            <value>
                <fullName>Write off – Allowance</fullName>
            </value>
            <value>
                <fullName>Write off – Bad Debt</fullName>
            </value>
            <value>
                <fullName>Write off – Deferred Government Revenue</fullName>
            </value>
            <value>
                <fullName>Write off – Revenue</fullName>
            </value>
            <value>
                <fullName>Entity Adjustment - correct bank</fullName>
                <isActive>false</isActive>
                <label>Entity Adjustment - correct bank</label>
            </value>
            <value>
                <fullName>Entity Adjustment - wrong entry and bank</fullName>
                <isActive>false</isActive>
                <label>Entity Adjustment - wrong entry and bank</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>