unpackaged/main/default/objects/npsp__Allocation__c/fields/GAU_Allocation_ID__c.field-meta.xml
<CustomField>
    <fullName>GAU_Allocation_ID__c</fullName>
    <description>Field created for Heller migration 2021</description>
    <label>GAU Allocation ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>