unpackaged/main/default/objects/npsp__Allocation__c/fields/GAU_Code__c.field-meta.xml
<CustomField>
    <fullName>GAU_Code__c</fullName>
    <description>Field created for Heller migration 2021</description>
    <label>GAU Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>