unpackaged/main/default/objects/npsp__Allocation__c/fields/GL_Entity__c.field-meta.xml
<CustomField>
    <fullName>GL_Entity__c</fullName>
    <description>Heller created 2021</description>
    <label>GL-Entity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>