unpackaged/main/default/objects/npsp__Allocation__c/fields/GL_Fund_Restriction_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Fund_Restriction_Code__c</fullName>
    <description>Heller created 2021</description>
    <label>GL-Fund Restriction Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>