unpackaged/main/default/objects/npsp__Allocation__c/fields/GL_Location__c.field-meta.xml
<CustomField>
    <fullName>GL_Location__c</fullName>
    <description>Heller created 2021</description>
    <label>GL-Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>