unpackaged/main/default/objects/npsp__Allocation__c/fields/GL_Natural_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Natural_Code__c</fullName>
    <description>Heller created 2021</description>
    <label>GL-Natural Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>