unpackaged/main/default/objects/npsp__Allocation__c/fields/Grant_Segment__c.field-meta.xml
<CustomField>
    <fullName>Grant_Segment__c</fullName>
    <description>Heller created 2021</description>
    <label>Grant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>