unpackaged/main/default/objects/npsp__Allocation__c/fields/Initial_Budget_Date_ddr_edf__c.field-meta.xml
<CustomField>
    <fullName>Initial_Budget_Date_ddr_edf__c</fullName>
    <description>Heller created 2021</description>
    <label>Initial FY Budget Date</label>
    <type>Date</type>
</CustomField>