unpackaged/main/default/objects/npsp__Allocation__c/fields/LCRM_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Last_Modified_Date__c</fullName>
    <description>Heller created 2021</description>
    <label>LCRM Last Modified Date</label>
    <type>DateTime</type>
</CustomField>