unpackaged/main/default/objects/npsp__Allocation__c/fields/Netsuite_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_External_ID__c</fullName>
    <description>Heller created 2021</description>
    <label>Netsuite External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>