unpackaged/main/default/objects/npsp__Allocation__c/fields/OnceReversed__c.field-meta.xml
<CustomField>
    <fullName>OnceReversed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Heller created 2021</description>
    <label>OnceReversed</label>
    <type>Checkbox</type>
</CustomField>