unpackaged/main/default/objects/npsp__Allocation__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <formula>npsp__Opportunity__r.CloseDate</formula>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>