unpackaged/main/default/objects/npsp__Allocation__c/fields/Oppty_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Record_ID__c</fullName>
    <formula>npsp__Payment__r.npe01__Opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Record ID</label>
    <type>Text</type>
</CustomField>