unpackaged/main/default/objects/npsp__Allocation__c/fields/Pledge_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Adjustment__c</fullName>
    <description>Heller created 2021</description>
    <label>Pledge Adjustment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carry-over</fullName>
            </value>
            <value>
                <fullName>No adjusting entry</fullName>
            </value>
            <value>
                <fullName>Pledge revision</fullName>
            </value>
            <value>
                <fullName>Designation Adjustment</fullName>
            </value>
            <value>
                <fullName>Pledge Revision - Amount Increase</fullName>
            </value>
            <value>
                <fullName>Pledge Revision - Amount Decrease</fullName>
            </value>
            <value>
                <fullName>Write off - Bad Debt</fullName>
            </value>
            <value>
                <fullName>Write off - Allowance</fullName>
            </value>
            <value>
                <fullName>Write off - Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>