unpackaged/main/default/objects/npsp__Allocation__c/fields/Pledge_Rev_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Rev_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Pledge Rev Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>GAU Allocations (Pledge Rev Campaign)</relationshipLabel>
    <relationshipName>GAU_Allocations1</relationshipName>
    <type>Lookup</type>
</CustomField>