unpackaged/main/default/objects/npsp__Allocation__c/fields/Pledge_Rev_Donor__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Rev_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Pledge Rev Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GAU Allocations (Pledge Rev Donor)</relationshipLabel>
    <relationshipName>GAU_Allocations1</relationshipName>
    <type>Lookup</type>
</CustomField>