unpackaged/main/default/objects/npsp__Allocation__c/fields/Pledge_Rev_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Rev_Gift_Date__c</fullName>
    <description>Heller created 2021</description>
    <label>Pledge Rev Gift Date</label>
    <type>Date</type>
</CustomField>