unpackaged/main/default/objects/npsp__Allocation__c/fields/Pledge_Rev_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Rev_Proposal__c</fullName>
    <description>Heller created 2021</description>
    <label>Pledge Rev Proposal #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>