unpackaged/main/default/objects/npsp__Allocation__c/fields/Pledge_Rev_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Rev_Transaction_Type__c</fullName>
    <description>Heller created 2021</description>
    <label>Pledge Rev Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>