unpackaged/main/default/objects/npsp__Allocation__c/fields/Posted__c.field-meta.xml
<CustomField>
    <fullName>Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created for Heller migration 2021</description>
    <label>Posted</label>
    <type>Checkbox</type>
</CustomField>