unpackaged/main/default/objects/npsp__Allocation__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <description>Field created for Heller migration 2021</description>
    <label>Posted Date</label>
    <type>DateTime</type>
</CustomField>