unpackaged/main/default/objects/npsp__Allocation__c/fields/Posting_User__c.field-meta.xml
<CustomField>
    <fullName>Posting_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Heller created 2021</description>
    <label>Posting User</label>
    <type>Checkbox</type>
</CustomField>