unpackaged/main/default/objects/npsp__Allocation__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>GAU Allocations</relationshipLabel>
    <relationshipName>GAU_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>