unpackaged/main/default/objects/npsp__Allocation__c/fields/Restriction__c.field-meta.xml
<CustomField>
    <fullName>Restriction__c</fullName>
    <description>Heller created 2021</description>
    <label>Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Restriction</valueSetName>
    </valueSet>
</CustomField>