unpackaged/main/default/objects/npsp__Allocation__c/fields/Rev_Donor__c.field-meta.xml
<CustomField>
    <fullName>Rev_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Rev Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GAU Allocations</relationshipLabel>
    <relationshipName>GAU_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>