unpackaged/main/default/objects/npsp__Allocation__c/fields/Rev_Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Rev_Primary_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Rev Primary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>GAU Allocations (Rev Primary Campaign)</relationshipLabel>
    <relationshipName>GAU_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>