unpackaged/main/default/objects/npsp__Allocation__c/fields/Rev_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Rev_Proposal__c</fullName>
    <description>Heller created 2021</description>
    <label>Rev Proposal #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>