unpackaged/main/default/objects/npsp__Allocation__c/fields/Rev_Stage__c.field-meta.xml
<CustomField>
    <fullName>Rev_Stage__c</fullName>
    <description>Heller created 2021</description>
    <label>Rev Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>