unpackaged/main/default/objects/npsp__Allocation__c/fields/Reversal_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Posted_Date__c</fullName>
    <description>Field created for Heller migration 2021</description>
    <label>Reversal Posted Date</label>
    <type>Date</type>
</CustomField>