unpackaged/main/default/objects/npsp__Allocation__c/fields/Reversal_Posting_User__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Posting_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field created for Heller migration 2021</description>
    <label>Reversal Posting User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GAU_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>