unpackaged/main/default/objects/npsp__Allocation__c/fields/Reversed__c.field-meta.xml
<CustomField>
    <fullName>Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created for Heller migration 2021</description>
    <label>Reversed</label>
    <type>Checkbox</type>
</CustomField>