unpackaged/main/default/objects/npsp__Allocation__c/fields/Reversed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Date__c</fullName>
    <description>Field created for Heller migration 2021</description>
    <label>Reversed Date</label>
    <type>Date</type>
</CustomField>