unpackaged/main/default/objects/npsp__Allocation__c/fields/Reversing_User__c.field-meta.xml
<CustomField>
    <fullName>Reversing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field created for Heller migration 2021</description>
    <label>Reversing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GAU_Allocations1</relationshipName>
    <type>Lookup</type>
</CustomField>