unpackaged/main/default/objects/npsp__Allocation__c/fields/UpdatedByTrigger__c.field-meta.xml
<CustomField>
    <fullName>UpdatedByTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Heller created 2021</description>
    <label>UpdatedByTrigger</label>
    <type>Checkbox</type>
</CustomField>